# evcxr-typst

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rustfmt.toml
.cargo/: config.toml
crates/: CLAUDE.md
crates/evcxr-typst/: CLAUDE.md  Cargo.toml
crates/evcxr-typst/examples/: library_use.rs
crates/evcxr-typst/src/: cache.rs  cli.rs  discovery.rs  error_capture.rs  eval.rs  identity.rs  lib.rs  main.rs  version_check.rs  watch.rs
crates/evcxr-typst/tests/: deny_eval.rs  eval_sidecar_write_failure_is_non_fatal.rs  fallback_safety.rs  min_cli_enforcement.rs  no_stdout_sidecar.rs  rbe_hello.rs  rbe_print.rs  watch_no_noop_runaway.rs  watch_sidecar_backfill.rs  watch_subdir.rs  watch_subdir_relative.rs
crates/evcxr-typst/tests/fixtures/: no_stdout_main.typ
docs/: ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  DECISIONS.md  PLAN.md
examples/: CLAUDE.md
journal/: 2026-05-09-001-hello.md  2026-05-09-003-comment.md  2026-05-10-001-print.md  2026-05-13-001-print-debug.md  2026-05-13-002-print-display.md  2026-05-15-001-testcase-list.md  2026-05-15-002-fmt.md  2026-05-15-003-primitives.md  2026-05-15-004-primitives-literals.md  2026-05-15-005-tuples.md  2026-05-15-006-array.md  2026-05-15-007-custom-types-structs.md  2026-05-15-008-custom-types-enum.md  2026-05-15-009-enum-use.md  2026-05-15-010-enum-c-like.md  2026-05-15-011-enum-linked-list.md  2026-05-15-012-constants.md  2026-05-15-013-variable-bindings.md  2026-05-15-014-variable-bindings-subtree.md  2026-05-15-015-types-subtree.md  2026-05-15-016-conversion-subtree.md  CLAUDE.md  (+17 more)
(+92 files in other folders)
