[package]
name = "evcxr-typst"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Evaluate Rust snippets in Typst documents via evcxr"
repository = "https://github.com/CGMossa/evcxr-typst"
publish = false

[[bin]]
name = "evcxr-typst"
path = "src/main.rs"

[dependencies]
# D-006: path during dev. Switch to a published evcxr version before release.
# Path target is the in-repo .evcxr/ checkout (gitignored) — see D-025 for fork
# vs upstream policy and the read-only-clone framing.
evcxr = { path = "../../.evcxr/evcxr" }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"
crossbeam-channel = "0.5"
syn = { version = "2", features = ["full", "parsing"] }
ctrlc = "3"

[dev-dependencies]
tempfile = "3.27.0"
